# packaged-model-example

./: .gitignore  Dockerfile  README.md  check.py  pyproject.toml
inputs/: baseline.csv  config1.toml
src/packaged_model_example/: environment.py  gregwt_model.py  model.py
src/packaged_model_example/scripts/: run.py
