[project]
name = "packaged-model-example"
version = "0.1.0"
description = "Skeleton demonstrating uv and config"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neworder>=1.4.4",
    "pandas>=3.0.0",
    "pydantic-settings>=2.12.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.19",
]
gregwt = [
    "statsmodels>=0.14.6",
]

[tool.uv]
package = true


[tool.ruff]
line-length = 120

[project.scripts]
run-example-model = "packaged_model_example.scripts.run:main"
